tests/paczka1/small_fuzzy/13559498.err
Error in line 2: 474C6F2b7 S398 71,4
Error in line 1: fBw8kFcc A596 70,1
Error in line 6: SO7LQ2iOAF S203 22,9
